haskell-logic (0.6) unstable; urgency=low

  * Split a Logic class out of PropositionalLogic and make it the ancestor
    of PropositionalLogic and PredicateLogic.  This way we can eliminate
    the horrible atom parameter from the PredicateLogic type.

 -- David Fox <dsf@seereason.com>  Mon, 28 Jun 2010 06:34:43 -0700

haskell-logic (0.5.1) unstable; urgency=low

  * Rename variables in the moveQuantifiersOut operation of cnf to
    avoid collisions later.
  * Add an Enum instance for the V type so we can find fresh variables,
    and new functions for finding the quantified variables and all the
    variables in a formula.

 -- David Fox <dsf@seereason.com>  Sun, 27 Jun 2010 07:00:49 -0700

haskell-logic (0.5) unstable; urgency=low

  * Export distributeDisjuncts

 -- David Fox <dsf@seereason.com>  Fri, 25 Jun 2010 14:13:44 -0700

haskell-logic (0.4) unstable; urgency=low

  * Add documentation
  * Remove the normalize function
  * Remove the AtomicWord type (use the equivalent in Logic-TPTP.)
  * Make some derived methods into functions.

 -- David Fox <dsf@seereason.com>  Fri, 25 Jun 2010 09:32:22 -0700

haskell-logic (0.3) unstable; urgency=low

  * Eliminate the use of the unicode characters for for_all and
    exists, they make the amd64 version of haddock crash.

 -- David Fox <dsf@seereason.com>  Thu, 24 Jun 2010 13:46:42 -0700

haskell-logic (0.2) unstable; urgency=low

  * Add an Ord instance to AtomicFormula to satisfy the requirements
    of the satisfiable function in PropLogic.

 -- David Fox <dsf@seereason.com>  Thu, 24 Jun 2010 10:08:42 -0700

haskell-logic (0.1) unstable; urgency=low

  * Debianization generated by cabal-debian

 -- David Fox <dsf@seereason.com>  Wed, 23 Jun 2010 14:19:18 -0700
