@@ -22,7 +22,7 @@ import Happstack.Data (deriveNewData)
 import Happstack.State (Version, deriveSerialize)
 import Logic.Logic (Logic(..))
 import Logic.Propositional (PropositionalLogic(..), BinOp(..))
-import Logic.Predicate (PredicateLogic(..), Quant(..), InfixPred(..), showForm)
+import Logic.Predicate (PredicateLogic(..), Skolem(..), Quant(..), InfixPred(..), showForm)
     
 -- | The range of a formula is {True, False} when it has no free variables.
 data Formula p f
@@ -80,7 +80,7 @@ instance Logic (Formula p f) where
     x .&.   y = BinOp  x (:&:)   y
     (.~.) x   = (:~:) x
 
-instance (Logic (Formula p f), IsString f, Show p, Show f) =>
+instance (Logic (Formula p f), IsString f, Show p, Show f, Skolem V f) =>
          PropositionalLogic (Formula p f) (Formula p f) where
     atomic (InfixPred t1 (:=:) t2) = t1 .=. t2
     atomic (InfixPred t1 (:!=:) t2) = t1 .!=. t2
@@ -94,7 +94,7 @@ instance (Logic (Formula p f), IsString f, Show p, Show f) =>
           InfixPred t1 op t2 -> a (InfixPred t1 op t2)
           PredApp p ts -> a (PredApp p ts)
 
-instance (PropositionalLogic (Formula p f) (Formula p f), Show p, Show f, IsString f) =>
+instance (PropositionalLogic (Formula p f) (Formula p f), Show p, Show f, IsString f, Skolem V f) =>
           PredicateLogic (Formula p f) (Term f) V p f where
     for_all vars x = Quant All vars x
     exists vars x = Quant Exists vars x
@@ -103,11 +103,10 @@ instance (PropositionalLogic (Formula p f) (Formula p f), Show p, Show f, IsStri
     pApp x args = PredApp x args
     var = Var
     fApp x args = FunApp x args
-    toString (V s) = s
     x .=. y = InfixPred x (:=:) y
     x .!=. y = InfixPred x (:!=:) y
 
-instance (IsString f, Show p, Show f) => Show (Formula p f) where
+instance (IsString f, Show p, Show f, Skolem V f) => Show (Formula p f) where
     show = showForm
 
 foldFormula ::
